--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 #spring.datasource.username=postgres
 #Pongan sus contraseñas aqui
 #spring.datasource.password=2819070114
-spring.datasource.url = jdbc:postgresql://dpg-ch9ut1usi8uqs8n4e5n0-a.oregon-postgres.render.com/db_agripure
+spring.datasource.url = jdbc:postgresql://agripure.postgres.database.azure.com:5432/db_agripure
 spring.datasource.username = team_agridevelopers
 spring.datasource.password = tucOvQR3d8lB8b7vp0ZS4kEg31HqmHFJ
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
