change database properties on test

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/AgriPure
-spring.datasource.username=postgres
-#Pongan sus contraseñas aqui
-spring.datasource.password=admin123
+spring.datasource.url = jdbc:postgresql://agripure.postgres.database.azure.com:5432/db_agripure
+spring.datasource.username = team_agridevelopers
+spring.datasource.password = tucOvQR3d8lB8b7vp0ZS4kEg31HqmHFJ
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
