--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 #spring.datasource.username=postgres
 #Pongan sus contraseñas aqui
 #spring.datasource.password=2819070114
-spring.datasource.url = jdbc:postgresql://agripure.postgres.database.azure.com:5432/db_agripure
-spring.datasource.username = team_agridevelopers
-spring.datasource.password = tucOvQR3d8lB8b7vp0ZS4kEg31HqmHFJ
+#spring.datasource.url = jdbc:postgresql://dpg-ch9ut1usi8uqs8n4e5n0-a.oregon-postgres.render.com:5432/db_agripure
+#spring.datasource.username = team_agridevelopers
+#spring.datasource.password = tucOvQR3d8lB8b7vp0ZS4kEg31HqmHFJ
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
